<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_list_file"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.scratch.ashish.fileserverapp.activities.ListFileActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="select college"/>
    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:id="@+id/college_spinner"
        android:prompt="@string/college_prompt"
        android:spinnerMode="dialog"
        >


    </android.support.v7.widget.AppCompatSpinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="select college"/>

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:id="@+id/branch_spinner"
        android:prompt="@string/branch_prompt"
        android:spinnerMode="dialog">

    </android.support.v7.widget.AppCompatSpinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="select college"/>

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:id="@+id/course_spinner"
        android:prompt="@string/course_prompt"
        android:spinnerMode="dialog">

    </android.support.v7.widget.AppCompatSpinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="select college"/>

    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:id="@+id/year_spinner"
        android:prompt="@string/year_prompt"
        android:spinnerMode="dialog">

    </android.support.v7.widget.AppCompatSpinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="select college"/>
    <android.support.v7.widget.AppCompatSpinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/subject_spinner"
        android:prompt="@string/subject_prompt"
        android:layout_margin="12dp"
        android:spinnerMode="dialog"/>



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:text = "Submit"/>

</LinearLayout>
